; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_hpilo.c_ilo_pkt_enqueue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_hpilo.c_ilo_pkt_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ilo_hwinfo = type { i32 }
%struct.ccb = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i8* }
%struct.TYPE_3__ = type { i8* }

@SENDQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ilo_hwinfo*, %struct.ccb*, i32, i32, i32)* @ilo_pkt_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ilo_pkt_enqueue(%struct.ilo_hwinfo* %0, %struct.ccb* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ilo_hwinfo*, align 8
  %7 = alloca %struct.ccb*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.ilo_hwinfo* %0, %struct.ilo_hwinfo** %6, align 8
  store %struct.ccb* %1, %struct.ccb** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @SENDQ, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %5
  %17 = load %struct.ccb*, %struct.ccb** %7, align 8
  %18 = getelementptr inbounds %struct.ccb, %struct.ccb* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %11, align 8
  br label %26

21:                                               ; preds = %5
  %22 = load %struct.ccb*, %struct.ccb** %7, align 8
  %23 = getelementptr inbounds %struct.ccb, %struct.ccb* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  store i8* %25, i8** %11, align 8
  br label %26

26:                                               ; preds = %21, %16
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @mk_entry(i32 %27, i32 %28)
  store i32 %29, i32* %12, align 4
  %30 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %6, align 8
  %31 = load i8*, i8** %11, align 8
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @fifo_enqueue(%struct.ilo_hwinfo* %30, i8* %31, i32 %32)
  ret i32 %33
}

declare dso_local i32 @mk_entry(i32, i32) #1

declare dso_local i32 @fifo_enqueue(%struct.ilo_hwinfo*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
